src/test/deca/context/invalid/provided/invalide_10_ops_logiques.deca
// Description : test 2 des operations logiques invalides

// Sortie : 
// ERROR  A MODIFIER

{
    string a;
    boolean b;
    a = b && a;

}